# NeKoRoGINE

./: CMakeLists.txt  README.md
src/Core/Components/: Application.cpp  DebugMenu.cpp  InputManager.cpp
src/Core/ECS/: ECS.h  Signature.h
src/Core/ECS/Systems/: CameraControllerSystem.h
src/Core/Rendering/: Buffer.cpp  RendererAPI.cpp  RendererAPI.h  Window.h
src/Editor/: Editor.cpp
src/Engine/Assets/: AssetManager.h
src/Engine/Components/: Application.cpp
src/Engine/ECS/Components/: Camera.h  Renderable.h  Transform.h
src/Engine/ECS/Systems/: RenderSystem.h
src/Engine/Rendering/: Buffer.cpp  Buffer.h  RenderCommand.h
src/Engine/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderCommand.cpp
src/Runtime/: Runtime.cpp
